# FooBarQixExtended

./: CMakeLists.txt
src/: infqixfoo.cpp  infqixfoo.h  main.cpp  main.h
test/: test.cpp  test_infqixfoo.cpp
